<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.FinishOrderFragment">

    <ImageView
        android:id="@+id/imgHeader"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:src="@drawable/bg_rec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toBottomOf="@id/imgHeader"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart">


        <TextView
            android:id="@+id/txtBill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/finish_order"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/white" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/loAmountPayed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/imgHeader">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAmountPayed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/amount_paid" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtPaymentMethod"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@drawable/rec_bg"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/cash"
            android:textSize="20sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/txtOrderDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/order_details"
        android:textColor="@color/appBlack"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/loAmountPayed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loClientNAme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/txtOrderDetails">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtClientName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/client_name" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/loClientNAme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPhoneNmber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_number" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/txtOrderElemnts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/order_elemnts"
        android:textColor="@color/appBlack"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/loPhoneNumber" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOrderElemnts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btnFinishOrder"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/txtOrderElemnts"
        tools:listitem="@layout/element_list_item" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFinishOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rec_bg"
        android:paddingVertical="12dp"
        android:text="@string/finish_order"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart" />

</androidx.constraintlayout.widget.ConstraintLayout>