<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.ui.OrderDetailFragment">


    <ImageView
        android:id="@+id/imgHeader"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:src="@drawable/img_header_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toBottomOf="@id/imgHeader"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart">

        <ImageView
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_home" />

        <TextView
            android:id="@+id/txtBillNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="123456789" />

        <TextView
            android:id="@+id/txtBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/check_number"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_arrow_back" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/scrollOrderDetail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/imgHeader">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp">


            <TextView
                android:id="@+id/txtTodayDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/appBlack"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/glEndInner"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="الإثنين 25 اكتوبر 2023 " />

            <TextView
                android:id="@+id/txtTodayTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/appBlack"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@id/glEndInner"
                app:layout_constraintTop_toBottomOf="@id/txtTodayDate"
                tools:text="@tools:sample/date/hhmm" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvOrderDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/glEndInner"
                app:layout_constraintStart_toStartOf="@id/glStartInner"
                app:layout_constraintTop_toBottomOf="@id/txtTodayTime">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="vertical"
                    android:paddingHorizontal="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/order_details"
                        android:textColor="@color/appBlack"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/client_name" />

                    <TextView
                        android:id="@+id/txtClientName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:textColor="@color/appBlack"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="احمد فكري" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/phone_number" />

                    <TextView
                        android:id="@+id/txtClientPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:textColor="@color/appBlack"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="01006236261" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/adress" />

                    <TextView
                        android:id="@+id/txtClientAdress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:textColor="@color/appBlack"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="شربين-دقهلية" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


            <TextView
                android:id="@+id/txtOrderElemnts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/order_elemnts"
                android:textColor="@color/appBlack"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/glEndInner"
                app:layout_constraintTop_toBottomOf="@id/cvOrderDetail" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvOrderElemnts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxHeight="200dp"
                app:layout_constraintBottom_toTopOf="@id/loOperations"
                app:layout_constraintEnd_toEndOf="@id/glEndInner"
                app:layout_constraintStart_toStartOf="@id/glStartInner"
                app:layout_constraintTop_toBottomOf="@id/txtOrderElemnts"
                tools:listitem="@layout/element_list_item" />


            <LinearLayout
                android:id="@+id/loOperations"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/primaryVariant"
                android:gravity="end"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingVertical="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/operations"
                    android:textColor="@color/primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtPaymentMethod"
                        android:layout_width="0dp"
                        android:gravity="end"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        tools:text="نقدي" />

                    <TextView
                        android:layout_width="0dp"

                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/payment_method"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/txtTotalDiscount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textSize="16sp"
                        tools:text="148 جنيه مصري" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/total_discount"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/txtTotalPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textColor="@color/primary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="148 جنيه مصري" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/total_price"
                        android:textColor="@color/primary"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glStartInner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glEndInner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="200dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>


