<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.HomeFragment">

    <ImageView
        android:id="@+id/imgHeader"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:src="@drawable/bg_rec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgMarket"
        android:layout_width="64dp"
        android:layout_height="0dp"
        android:elevation="5dp"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:src="@drawable/img_shop"
        app:layout_constraintBottom_toBottomOf="@id/txtTodayDate"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toTopOf="@id/txtMarketNAme" />

    <TextView
        android:id="@+id/txtMarketNAme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/store_name"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/txtTodayDate"
        app:layout_constraintEnd_toStartOf="@id/imgMarket"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTodayDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@id/imgHeader"
        app:layout_constraintEnd_toEndOf="@id/txtMarketNAme"
        app:layout_constraintTop_toBottomOf="@id/txtMarketNAme"
        tools:text="@tools:sample/date/ddmmyy" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvAddOrder"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/appBlue"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/imgHeader"
        app:strokeColor="@color/primary"
        app:strokeWidth="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="16dp"
            android:text="@string/add_new_order"
            android:textColor="@color/primary"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_shop" />

    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/txtAllOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/all_orders"
        android:textColor="@color/appBlack"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/cvAddOrder" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOrders"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/txtAllOrders"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/order_list_item" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>